--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                 </div>
   <div id ="ads2">
         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <!-- ads -->
+        <!-- Ads -->
         <ins class="adsbygoogle"
              style="display:block"
-             data-ad-client="ca-pub-7226526773557247"
-             data-ad-slot="8267597712"
+             data-ad-client="ca-pub-9234562639905393"
+             data-ad-slot="5692961722"
              data-ad-format="auto"></ins>
         <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
@@ -117,11 +117,11 @@
         <label>Search</label>
         <input type="text" id ="search" value ="Search" style="width:100px; height:20px;"/>
         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <!-- ads -->
+        <!-- Ads -->
         <ins class="adsbygoogle"
              style="display:block"
-             data-ad-client="ca-pub-7226526773557247"
-             data-ad-slot="8267597712"
+             data-ad-client="ca-pub-9234562639905393"
+             data-ad-slot="5692961722"
              data-ad-format="auto"></ins>
         <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
@@ -142,11 +142,11 @@
         </div>
     </div>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- ads -->
+    <!-- Ads -->
     <ins class="adsbygoogle"
          style="display:block"
-         data-ad-client="ca-pub-7226526773557247"
-         data-ad-slot="8267597712"
+         data-ad-client="ca-pub-9234562639905393"
+         data-ad-slot="5692961722"
          data-ad-format="auto"></ins>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
